update return object include base64
